# oftools_dsmigin

./: .gitignore  Makefile  README.md  README.txt  dsmigin.py  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
oftools_dsmigin/: CSV.py  Context.py  DatasetMigration.py  DatasetRecord.py  DownloadJob.py  DsmiginHandler.py  FTPHandler.py  FTPJob.py  FileHandler.py  GDG.py  Job.py  JobFactory.py  Listcat.py  ListcatEnum.py  ListcatJob.py  Log.py  Main.py  MigrationEnum.py  MigrationJob.py  Record.py  Statistics.py  UpdateJob.py  Utils.py  VSAMHandler.py  __init__.py
oftools_dsmigin/enums/: CSV.py  ListcatEnum.py  Message.py  MessageEnum.py  MigrationEnum.py
oftools_dsmigin/files/: CSV.py  Listcat.py
oftools_dsmigin/handlers/: FileHandler.py  ListcatHandler.py  ShellHandler.py
oftools_dsmigin/jobs/: FTPJob.py  Job.py  JobFactory.py  ListcatJob.py  MigrationJob.py
tests/: pytest.ini
tests/functional/log_level/: test_log_level.py
tests/unit/context/: test_enable_columns_list.py  test_generations.py  test_ip_address.py  test_number.py  test_working_directory.py
tests/unit/csv/: test_check_headers.py  test_read.py
tests/unit/file_handler/: test_check_extension.py  test_check_path_exists.py  test_copy_file.py  test_create_directory.py  test_get_files.py  test_read_file.py  test_write_file.py
tests/unit/ftp_job/: test_analyze.py  test_download.py  test_download_tape.py
tests/unit/gdg/: test_get_from mainframe.py
tests/unit/listcat/: test_analyze_txt.py  test_update_index_and_data.py
tests/unit/listcat_handler/: test_get_migrated.py
tests/unit/listcat_job/: test_analyze.py  test_get_from_file.py  test_get_from_mainframe.py
tests/unit/main/: test_argparse_errors.py  test_arguments_errors.py  test_keyboard_input.py  test_options.py
tests/unit/migration_job/: test_analyze.py  test_cobgensch.py  test_is_in_openframe.py  test_migrate.py  test_migrate_po.py  test_migrate_ps.py  test_migrate_vsam.py
tests/unit/shell_handler/: test_execute_command.py  test_execute_ftp_command.py  test_read_command.py
