[metadata]
name = oftools-dsmigin
author = TmaxSoft
author_email = tfsadmin@tmaxsoft.com
home_page = https://github.com/tmaxsoft-us/oftools_dsmigin
description = A tool designed to manage the download and migration of datasets from a mainframe environment to a Linux system with OpenFrame.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Reports = https://github.com/tmaxsoft-us/oftools_dsmigin/issues
    Documentation = https://github.com/tmaxsoft-us/oftools_docs/tree/master/dsmigin
    Source Code = https://github.com/tmaxsoft-us/oftools_dsmigin/tree/master
license = CC4.0-BY-NC-SA
license_file = LICENSE.md
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: System :: Hardware :: Mainframes

[options]
# Flag specifying whether the project can be safely installed and run from a zip file
zip_safe = False
# Tells setuptools to automatically include any data files that are specified by the MANIFEST.in file
include_package_data = True
# Specify what other distributions need to be present in order for the setup script to run
setup_requires =
  wheel
  pbr
  setuptools
  setuptools-scm
# Specify what other distributions need to be installed when this one is
install_requires =
  aenum
  coverage
  pytest
  pbr
  setuptools
  setuptools-scm
  versioneer
# Version specifier for the Python version
python_requires = >=3.6, <4
test_suite = tests

[sdist]
formats = gztar

[files]
packages =
    oftools_dsmigin

[entry_points]
console_scripts =
    oftools_dsmigin = oftools_dsmigin.Main:main